# olive-solve

./: Cargo.toml  LICENSE.md  NOTICE  README.md  build_extractor_test.sh
.cargo/: config.toml
.github/workflows/: release-wheels.yml
docs/decisions/: 2026-06-12-release-pipeline-restructure.md  2026-06-12-session-vigilant-wright-018PPLNhiAv325425icnyf8g.md
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs
server/tests/: tetra3_server_test.rs
tetra3/: Cargo.toml
tetra3-py/: Cargo.toml  README.md  benchmark_fast_path.sh  pyproject.toml
tetra3-py/src/: lib.rs
tetra3/src/: extractor.rs  fast_extractor.rs  fast_extractor_seq.rs  lib.rs  solver.rs  tetra3.rs
tetra3/tests/: parallel_parity.rs  test_mirrored_image_e2e.rs  validate_extractor.rs  validate_solver.rs
