[workspace]
members = [
    "tetra3",
    "tetra3-py",
    "server",
]
resolver = "2"

[profile.test]
opt-level = 3          # The solver validation/parity tests run thousands of solves

[profile.release]
lto = "fat"            # Enables Link-Time Optimization across all dependency crates
codegen-units = 1      # Compiles the whole program as a single unit for max optimization
panic = "abort"        # Removes stack-unwinding overhead
strip = true           # Strips debug symbols to reduce binary size and memory layout
