[package]
name = "tetra3-py"
version = "0.1.2"
edition = "2024"

[lib]
name = "tetra3_py"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extractor"]
# Forwarded to the core crate: include the Extractor/FastExtractor pipelines
# and the extraction-related Python methods. Build with --no-default-features
# for a solver-only wheel (e.g. when sycamore star_detect does extraction).
extractor = ["tetra3_core/extractor"]

[dependencies]
# Alias the core crate so it doesn't conflict with the Python module name
tetra3_core = { path = "../tetra3", package = "tetra3", default-features = false }
pyo3 = { version = "0.28.3", features = ["abi3", "abi3-py38"] }
numpy = "0.28"
