[package]
name = "tetra3"
version = "0.1.0"
edition = "2024"

[features]
default = ["extractor"]
# The centroid-extraction pipelines (Extractor + FastExtractor). Consumers
# that bring their own extractor (e.g. diofinder pairs this solver with
# sycamore star_detect) can build with --no-default-features to drop the
# ~4,300 lines of extraction code from the binary; the solver API is
# unaffected.
extractor = []

[dependencies]
zip = "0.6"
ndarray = { version = "0.17.1", features = ["rayon"] }
npyz = "0.8"
kiddo = "4.2.0"
nalgebra = "0.34.1"
rayon = "1.11.0"

[build-dependencies]
tonic-build = "0.11"
pyo3-build-config = { version = "0.28.2", features = ["resolve-config"] }

[dev-dependencies]
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
numpy = "0.28"
walkdir = "2.3"
cedar_detect = { git = "https://github.com/smroid/cedar-detect" }
image = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
